- add `z-index` to prevent overlay collisions
UX-2347
<<<Jenkins Check-In of Tested SHA: 4b4226d1201864aca5f3f678d0babdca53cb2ef6 for ci-admin@okta.com>>>
Artifact: okta-ui

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -15,6 +15,7 @@
 .modal--overlay {
   display: flex;
   position: fixed;
+  z-index: 1;
   top: 0;
   right: 0;
   bottom: 0;
